--- a/ZSözlük/Views/Sozluk/UserDetail.cshtml
+++ b/ZSözlük/Views/Sozluk/UserDetail.cshtml
@@ -34,17 +34,14 @@
                         </div>
                         <div class="text-center">
                             <h3>
-                                @Model.FirstName @Model.LastName <span class="font-weight-light">, 27</span>
+                                @Model.FirstName @Model.LastName <span class="font-weight-light">, @Model.Age</span>
                             </h3>
                             <div class="h5 font-weight-300">
                                 <i class="ni location_pin mr-2"></i>@Model.Email
                             </div>
                             <div class="h5 mt-4">
-                                <i class="ni business_briefcase-24 mr-2"></i> Bucharest, Romania
-                            </div>
-                            <div>
-                                <i class="ni education_hat mr-2"></i>University of Computer Science
-                            </div>
+                                <i class="ni business_briefcase-24 mr-2"></i> @Model.Country, @Model.City
+                            </div>                          
                         </div>
                     </div>
                 </div>
