--- a/ZSözlük/Views/Account/SignUp.cshtml
+++ b/ZSözlük/Views/Account/SignUp.cshtml
@@ -43,6 +43,21 @@
                     <span asp-validation-for="UserName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="Age" class="control-label"></label>
+                    <input asp-for="Age" class="form-control" />
+                    <span asp-validation-for="Age" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Country" class="control-label"></label>
+                    <input asp-for="Country" class="form-control" />
+                    <span asp-validation-for="Country" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="City" class="control-label"></label>
+                    <input asp-for="City" class="form-control" />
+                    <span asp-validation-for="City" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <label asp-for="Password" class="control-label"></label>
                     <input asp-for="Password" class="form-control" />
                     <span asp-validation-for="Password" class="text-danger"></span>
@@ -55,8 +70,8 @@
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" />
                 </div>
-                <div >
-                    <a asp-controller="Sozluk" asp-action="Index" class="btn btn-outline-danger btn-rounded btn-block my-4 waves-effect z-depth-0">Vazgeç</a> 
+                <div>
+                    <a asp-controller="Sozluk" asp-action="Index" class="btn btn-outline-danger btn-rounded btn-block my-4 waves-effect z-depth-0">Vazgeç</a>
                 </div>
             </form>       
         </div>
