--- a/ZSözlük/Views/Shared/_Header.cshtml
+++ b/ZSözlük/Views/Shared/_Header.cshtml
@@ -15,7 +15,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
+                        <a class="nav-link" asp-controller="Home" asp-action="Index">Ana Sayfa</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Sozluk" asp-action="Index">Tartışmalar</a>
