--- a/ZSözlük/Views/Shared/_LoginInfo.cshtml
+++ b/ZSözlük/Views/Shared/_LoginInfo.cshtml
@@ -4,11 +4,11 @@
 {   
         <li class="nav-item dropdown mr-3">
             <a class="nav-link dropdown-toggle text-dark" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <b>@User.Identity.Name</b>
+                <b class="text-white">@User.Identity.Name</b>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item small" asp-action="MyProfile" asp-controller="Sozluk">My Profile</a>
-                <a class="dropdown-item small" asp-action="Logout" asp-controller="Account">Logout</a>
+                <a class="dropdown-item" asp-action="MyProfile" asp-controller="Sozluk">Profilim</a>
+                <a class="dropdown-item" asp-action="Logout" asp-controller="Account">Çıkış Yap</a>
             </div>
         </li>
 }
@@ -16,8 +16,8 @@ else
 {
 
 <li class="nav-item">
-    <a asp-controller="Account" asp-action="Login" class="btn btn-primary">Login</a>
-    <a asp-controller="Account" asp-action="Signup" class="btn btn-primary">Register</a>
+    <a asp-controller="Account" asp-action="Login" class="btn btn-primary badge-pill">Giriş</a>
+    <a asp-controller="Account" asp-action="Signup" class="btn btn-primary badge-pill">Kayıt Ol</a>
 </li>
 }
 
