--- a/ZSözlük/Views/Sozluk/KonuEkle.cshtml
+++ b/ZSözlük/Views/Sozluk/KonuEkle.cshtml
@@ -4,7 +4,6 @@
     <div class="modal-dialog modal-dialog-centered" role="form">
         <!--Modal Content-->
         <div class="modal-content">
-
             <div class="modal-header  border-bottom-0">
                 <h4>Konu Ekle</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
@@ -20,7 +19,7 @@
                     </div>
                 </div>
                 <div class="modal-footer border-top-0 d-flex justify-content-center">
-                    <button type="submit" value="KonuEkle" class="btn btn-success">Submit</button>
+                    <button type="submit" value="KonuEkle" class="btn btn-outline-primary badge-pill"> Kaydet </button>
                 </div>
             </form>
         </div>
