--- a/ZSözlük/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/ZSözlük/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-info">
             <a class="navbar-brand" href="/">
-                <img src="/img/ZLogo.png" width="30" height="30" /> Z Sözlük
+                <img src="/img/LOGO.png" width="30" height="30" /> Z Sözlük
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
